--- a/educazionefisica.html
+++ b/educazionefisica.html
@@ -13,21 +13,21 @@
 
     <nav>
         <ul>
-            <li><a href="index.php">Home</a></li>
-            <li><a href="pcto.php">PCTO</a></li>
-            <li><a href="progetti.php">Progetti</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
+            <li><a href="progetti.html">Progetti</a></li>
             <li class="dropdown">
                 <a href="#">Materie</a>
                 <ul class="dropdown-content">
-                    <li><a href="italiano.php">Italiano</a></li>
-                    <li><a href="storia.php">Storia</a></li>
-                    <li><a href="matematica.php">Matematica</a></li>
-                    <li><a href="inglese.php">Inglese</a></li>
-                    <li><a href="religione.php">Religione</a></li>
-                    <li><a href="tpsit.php">TPSIT</a></li>
-                    <li><a href="intelligenzaartificiale.php">Intelligenza Artificiale</a></li>
-                    <li><a href="informatica.php">Informatica</a></li>
-                    <li><a href="sistemiereti.php">Sistemi e Reti</a></li>
+                    <li><a href="italiano.html">Italiano</a></li>
+                    <li><a href="storia.html">Storia</a></li>
+                    <li><a href="matematica.html">Matematica</a></li>
+                    <li><a href="inglese.html">Inglese</a></li>
+                    <li><a href="religione.html">Religione</a></li>
+                    <li><a href="tpsit.html">TPSIT</a></li>
+                    <li><a href="intelligenzaartificiale.html">Intelligenza Artificiale</a></li>
+                    <li><a href="informatica.html">Informatica</a></li>
+                    <li><a href="sistemiereti.html">Sistemi e Reti</a></li>
                 </ul>
             </li>
         </ul>
