--- a/inglese.html
+++ b/inglese.html
@@ -12,23 +12,23 @@
     </header>
         <nav>
         <ul>
-            <li><a href="index.php">Home</a></li>
             <li class="dropdown">
                 <a href="#">Materie</a>
                 <ul class="dropdown-content">
-                    <li><a href="storia.php">Storia</a></li>
-                    <li><a href="educazionefisica.php">Educazione Fisica</a></li>
-                    <li><a href="matematica.php">Matematica</a></li>
-                    <li><a href="religione.php">Religione</a></li>
-                    <li><a href="tpsit.php">TPSIT</a></li>
-                    <li><a href="intelligenzaartificiale.php">Intelligenza Artificiale</a></li>
-                    <li><a href="informatica.php">Informatica</a></li>
-                    <li><a href="sistemiereti.php">Sistemi e Reti</a></li>
-                    <li><a href="gpoi.php">GPOI</a></li>
+                    <li><a href="storia.html">Storia</a></li>
+                    <li><a href="educazionefisica.html">Educazione Fisica</a></li>
+                    <li><a href="matematica.html">Matematica</a></li>
+                    <li><a href="religione.html">Religione</a></li>
+                    <li><a href="tpsit.html">TPSIT</a></li>
+                    <li><a href="intelligenzaartificiale.html">Intelligenza Artificiale</a></li>
+                    <li><a href="informatica.html">Informatica</a></li>
+                    <li><a href="sistemiereti.html">Sistemi e Reti</a></li>
+                    <li><a href="gpoi.html">GPOI</a></li>
                 </ul>
             </li>
-            <li><a href="pcto.php">PCTO</a></li>
-            <li><a href="progetti.php">Progetti</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
+            <li><a href="progetti.html">Progetti</a></li>
         </ul>
     </nav>
     
