--- a/storia.html
+++ b/storia.html
@@ -10,11 +10,12 @@
     <header>
         <h1>Il mio Sito Personale</h1>
     </header>
+    
     <nav>
         <ul>
-            <li class="dropdown">
+            <li>
                 <a href="#">Materie</a>
-                <ul class="dropdown-content">
+                <ul class="dropdown">
                     <li><a href="italiano.html">Italiano</a></li>
                     <li><a href="educazionefisica.html">Educazione Fisica</a></li>
                     <li><a href="matematica.html">Matematica</a></li>
@@ -28,10 +29,11 @@
                 </ul>
             </li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="pcto.html">PCTO</a></li>
             <li><a href="progetti.html">Progetti</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
         </ul>
     </nav>
+
     <div class="container">
         <main>
             <h2>Storia</h2>
