--- a/educazionefisica.html
+++ b/educazionefisica.html
@@ -13,12 +13,9 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pcto.html">PCTO</a></li>
-            <li><a href="progetti.html">Progetti</a></li>
-            <li class="dropdown">
+            <li>
                 <a href="#">Materie</a>
-                <ul class="dropdown-content">
+                <ul class="dropdown">
                     <li><a href="italiano.html">Italiano</a></li>
                     <li><a href="storia.html">Storia</a></li>
                     <li><a href="matematica.html">Matematica</a></li>
@@ -28,8 +25,12 @@
                     <li><a href="intelligenzaartificiale.html">Intelligenza Artificiale</a></li>
                     <li><a href="informatica.html">Informatica</a></li>
                     <li><a href="sistemiereti.html">Sistemi e Reti</a></li>
+                    <li><a href="gpoi.html">GPOI</a></li>
                 </ul>
             </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="progetti.html">Progetti</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
         </ul>
     </nav>
 
