--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </main>
     </div>
     <footer>
-        <p>&copy; <?php echo date("Y"); ?> Leonardo Sandroni. Belvedere Ostrense 60030.</p>
+        <p>2025 Leonardo Sandroni. Belvedere Ostrense 60030.</p>
     </footer>
 
 </body>
