--- a/informatica.html
+++ b/informatica.html
@@ -15,7 +15,7 @@
                 <a href="#">Materie</a>
                 <ul class="dropdown">
                     <li><a href="italiano.html">Italiano</a></li>
-                    <li><a href="storia.htmlp">Storia</a></li>
+                    <li><a href="storia.html">Storia</a></li>
                     <li><a href="educazionefisica.html">Educazione Fisica</a></li>
                     <li><a href="matematica.html">Matematica</a></li>
                     <li><a href="inglese.html">Inglese</a></li>
@@ -27,8 +27,8 @@
                 </ul>
             </li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="pcto.html">PCTO</a></li>
             <li><a href="progetti.html">Progetti</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
         </ul>
     </nav>
 
