--- a/inglese.html
+++ b/inglese.html
@@ -10,11 +10,13 @@
     <header>
         <h1>Il mio Sito Personale</h1>
     </header>
-        <nav>
+    
+    <nav>
         <ul>
-            <li class="dropdown">
+            <li>
                 <a href="#">Materie</a>
-                <ul class="dropdown-content">
+                <ul class="dropdown">
+                    <li><a href="italiano.html">Italiano</a></li>
                     <li><a href="storia.html">Storia</a></li>
                     <li><a href="educazionefisica.html">Educazione Fisica</a></li>
                     <li><a href="matematica.html">Matematica</a></li>
@@ -27,8 +29,8 @@
                 </ul>
             </li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="pcto.html">PCTO</a></li>
             <li><a href="progetti.html">Progetti</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
         </ul>
     </nav>
     
