--- a/progetti.html
+++ b/progetti.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li>
-                Materie
+                <a href="#">Materie</a>
                 <ul class="dropdown">
                     <li><a href="italiano.html">Italiano</a></li>
                     <li><a href="storia.html">Storia</a></li>
@@ -31,7 +31,6 @@
             </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="pcto.html">PCTO</a></li>
-            <li><a href="progetti.html">Progetti</a></li>
         </ul>
     </nav>
 
