--- a/religione.html
+++ b/religione.html
@@ -13,9 +13,9 @@
 
     <nav>
         <ul>
-            <li class="dropdown">
+            <li>
                 <a href="#">Materie</a>
-                <ul class="dropdown-content">
+                <ul class="dropdown">
                     <li><a href="italiano.html">Italiano</a></li>
                     <li><a href="storia.html">Storia</a></li>
                     <li><a href="educazionefisica.html">Educazione Fisica</a></li>
@@ -29,8 +29,8 @@
                 </ul>
             </li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="pcto.html">PCTO</a></li>
             <li><a href="progetti.html">Progetti</a></li>
+            <li><a href="pcto.html">PCTO</a></li>
         </ul>
     </nav>
 
